@@ -1,3 +1,12 @@
+2006-10-05  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* locales/tt_RU: Fix territory, title and descriptive comment.
+
+2006-10-05  Ulrich Drepper  <drepper@redhat.com>
+
+	* locales/pa_IN (abday): Fix spelling of Sunday.
+	Patch by Mayank Jain <majain@redhat.com>.
+
 2006-10-01  Ulrich Drepper  <drepper@redhat.com>
 
 	* locales/en_GB: Use more complete en_US data in LC_NAME.
