@@ -1,3 +1,14 @@
+2006-10-06  Andreas Jaeger  <aj@suse.de>
+
+	* include/features.h (__GLIBC_MINOR__): It's glibc 2.5 now.
+
+2006-10-06  Ulrich Drepper  <drepper@redhat.com>
+
+	* po/pl.po: Update from translation team.
+
+	* nscd/nscd.c (main): Fix typo in message.
+	Patch by Jakub Bogsz <qboosh@pld-linux.org>.
+
 2006-10-02  Jakub Jelinek  <jakub@redhat.com>
 
 	[BZ #3291]
